--- a/src/login/login.css
+++ b/src/login/login.css
@@ -1,23 +1,25 @@
-html {
-     height: 100%;
-     width: 100%;
-}
-
 .corpoLogin {
      background-color: #1c1d1c !important;
-     height: 100vh;
+     height: 100dvh;
+     width: 100%;
+     display: flex;
+     align-items: center;
+     justify-content: center;
 }
 
 .gridLogin {
      display: flex;
-     justify-content: center;
+     justify-content: space-between;
+     width: 70%;
+     height: 60%;
+     border-radius: 2rem;
+     background: #f3f3f3;
 }
 
 .logo {
-     margin-top: 20vh;
-     height: 55vh;
+     width: 50%;
      background-color: #1b5e0e;
-     border-radius: 25px 0 0 25px;
+     border-radius: 2rem 0 0 2rem;
      display: flex;
      align-items: center;
      justify-content: center;
@@ -25,31 +27,48 @@ html {
 
 
 .logo img {
-     width: 32vw;
+     width: 60%;
      color: #fff;
 }
 
 .login {
-     margin-top: 20vh;
-     height: 55vh;
-     border-radius: 0 25px 25px 0;
-     padding: 4rem 2rem 2rem 2rem;
-
-     background: #f3f3f3;
-
+     padding: 1rem;
+     width: 50%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
 }
 
 .loginInput {
-     width: 100%;
-     height: 5vh;
+     display: flex;
+     flex-direction: column;
+     gap: 0.7rem;
+     width: 100% !important; 
+}
 
+.loginInput div {
+     display: flex;
+     flex-direction: column;
+     gap: 0.6rem;
+     width: 100%;
+}
+
+.loginInput div label {
+     font-size: 1.5rem;
+}
+
+.loginInput div input {
+     width: 100%;
+     padding: 0.4rem;
+     border-radius: 0.6rem;
+     font-size: 1rem !important;
+     border: solid 1px #6a7468 !important;
 }
 
 .BTMLogin {
      width: 100%;
-     margin-top: 2rem;
-     height: 7vh;
-     border-radius: 30px !important;
+     border-radius: 0.9rem !important;
      font-size: 2rem !important;
      text-transform: uppercase;
 }
